# alimer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  alimer.cmd  alimer.py  build_windows.bat
Source/Alimer/: Alimer.natvis  CMakeLists.txt  alimer.natvis  config.h.in
Source/Alimer/Application/: AppHost.cpp  Application.cpp  Application.h  ApplicationPlatform.cpp  ApplicationPlatform.h  GameEntry.cpp  GameSystem.cpp  GameSystem.h  GameTime.cpp  GameTime.h  Window.cpp  Window.h
Source/Alimer/Core/: Allocator.cpp  Allocator.h  Array.h  ArrayView.h  Assert.cpp  Assert.h  Concurrency.cpp  Concurrency.h  (+37 more)
Source/Managed/: CMakeLists.txt
engine/: AlimerConfig.h.in  CMakeLists.txt  PlatformDef.h  PlatformIncl.h  alimer.natvis  application.cpp  application.h  config.h.in
engine/Application/: AppHost.h  Application.cpp  Application.h  GameSystem.cpp  GameSystem.h  GameTime.cpp  GameTime.h  Window.cpp  Window.h
engine/Assets/: AssetImporter.h  AssetLoader.h  AssetManager.cpp  AssetManager.h  TextureLoader.cpp  TextureLoader.h
engine/Containers/: Array.h  ArrayView.h
engine/Core/: Allocator.h  Array.h  ArrayView.h  Assert.cpp  Assert.h  Concurrency.cpp  Concurrency.h  Containers.h  Delegate.h  Engine.cpp  Hash.cpp  Hash.h  Input.cpp  Input.h  Log.cpp  Log.h  Math.cpp  Math.h  Memory.cpp  Memory.h  MiniDump.cpp  MiniDump.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Plugin.cpp  Plugin.h  Preprocessor.h  Ptr.cpp  Ptr.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  StringId.cpp  StringId.h  ThreadSafeQueue.h  Utils.h  Vector.h  (+1 more)
engine/Diagnostics/: Assert.cpp  Log.cpp  Log.h  Stopwatch.cpp  Stopwatch.h
engine/Games/: Game.cpp  Game.h  GameEntry.cpp  GameSystem.cpp  GameSystem.h  GameTime.cpp  GameTime.h  GameWindow.cpp  GameWindow.h
engine/Graphics/: BackendTypes.h  Buffer.cpp  CommandBuffer.cpp  CommandBuffer.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  GPUBuffer.cpp  GPUBuffer.h  GPUResource.cpp  GPUResource.h  Graphics.cpp  Graphics.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsProvider.cpp  GraphicsProvider.h  GraphicsResource.cpp  GraphicsResource.h  Graphics_Internal.h  Gui.cpp  Gui.h  PixelFormat.cpp  PixelFormat.h  RHI.cpp  RHI.h  ResourceUploadBatch.cpp  ResourceUploadBatch.h  Resources.cpp  Resources.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h  Types.cpp  Types.h  graphics.cpp  (+2 more)
engine/IO/: FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  Path.cpp  Path.h  Stream.cpp  Stream.h
engine/Input/: InputManager.cpp  InputManager.h
engine/Math/: Color.cpp  Color.h  Extent.cpp  Extent.h  MathHelper.h  Matrix4x4.cpp  Matrix4x4.h  Point.cpp  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  Size.cpp  Size.h  Vector.h  Vector4.cpp  Vector4.h  Viewport.cpp  Viewport.h  math.h  size.h
engine/Physics/: RigidBodyComponent.cpp  RigidBodyComponent.h
engine/Platform/: Application.cpp  Application.h  Event.cpp  Event.h  Input.cpp  Input.h  Library.h  Main.cpp  Platform.cpp  Platform.h  Window.cpp  Window.h  WindowHandle.h
engine/RHI/: CommandContext.cpp  CommandContext.h  GraphicsResource.cpp  GraphicsResource.h  PixelFormat.cpp  PixelFormat.h  RHI.cpp  RHI.h  RHITypes.h  RHI_Internal.h  Texture.cpp  Texture.h  Types.cpp  Types.h
engine/Scene/: Entity.cpp  Entity.h  EntityComponent.cpp  EntityComponent.h  EntityManager.cpp  EntityManager.h  SceneSystem.cpp  SceneSystem.h
engine/UI/: ImGuiLayer.cpp  ImGuiLayer.h
engine/containers/: array.h  array_view.h
engine/core/: Assert.cpp  Assert.h  Concurrency.cpp  Concurrency.h  Delegate.h  Hash.cpp  Hash.h  Input.h  Library.h  Log.cpp  Log.h  Math.h  Object.h  Platform.cpp  Platform.h  Preprocessor.h  Ptr.cpp  Ptr.h  Stopwatch.cpp  Stopwatch.h  String.cpp  String.h  StringId.cpp  StringId.h  Utils.h  application.cpp  application.h  application_entry.cpp  log.cpp  log.h
engine/foundation/: build.h  platform.h  types.h  windows.h
engine/gpu/: agpu.c  agpu.h  agpu_backend.h  agpu_vk.c  gpu.c  gpu.cpp  gpu.h  gpu_backend.h  gpu_d3d.h  gpu_d3d11.c  gpu_d3d11.cpp  gpu_d3d12.c  gpu_d3d12.cpp  gpu_gl.c  gpu_vk.c  gpu_vk.cpp
engine/graphics/: BackendTypes.h  CommandBuffer.h  CommandContext.cpp  CommandContext.h  CommandQueue.cpp  CommandQueue.h  Framebuffer.cpp  Framebuffer.h  GPUAdapter.h  GPUBuffer.cpp  GPUBuffer.h  GPUDevice.cpp  GPUDevice.h  GPUProvider.cpp  GPUProvider.h  GPUResource.cpp  GPUResource.h  GraphicsAdapter.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsImpl.h  GraphicsProvider.cpp  GraphicsProvider.h  GraphicsResource.cpp  GraphicsResource.h  GraphicsSurface.h  ICommandBuffer.h  ICommandQueue.h  ISwapChain.h  ITexture.h  PixelFormat.cpp  PixelFormat.h  SwapChain.cpp  SwapChain.h  Swapchain.cpp  Swapchain.h  (+13 more)
engine/io/: path.cpp  path.h
engine/math/: Color.h  Math.h  Point.cpp  Point.h  Quaternion.cpp  Quaternion.h  Rect.h  Size.h  Vector.cpp  Vector.h  Viewport.cpp  Viewport.h  math.h  rect.h  size.h  vec2.h
engine/os/: Window.cpp  Window.h  event.cpp  event.h  os.c  os.cpp  os.h  os_glfw.c  window.cpp  window.h
engine/platform/: Window.h  application.cpp  application.h  main.cpp  platform.cpp  platform.h  window.cpp  window.h
engine/resource/: resource.cpp  resource.h
engine/window/: clipboard.cpp  clipboard.h  event.cpp  event.h  init.cpp  init.h  os.h  window.cpp  window.h
samples/: CMakeLists.txt
samples/01_hello/: main.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  main.c
src/Alimer/: CMakeLists.txt  config.h.in
src/Application/: AppContext.cpp  AppContext.h  Application.cpp  Application.h  Window.cpp  Window.h
src/Core/: Assert.h  Log.cpp  Log.h  Platform.cpp  Platform.h  Preprocessor.h
src/Graphics/: GraphicsDevice.cpp  GraphicsDevice.h  PixelFormat.cpp  Types.h
src/Tools/: CMakeLists.txt
tools/Editor/: CMakeLists.txt  Editor.cpp  Editor.h
tools/EditorFramework/: CMakeLists.txt
tools/ShaderCompiler/: CMakeLists.txt
tools/editor_framework/: CMakeLists.txt
(+839 files in other folders)
